<resources>
    <string name="app_name">BerryApp</string>
    <string name="gemini_api_key">AIzaSyAmgg25BSJyqTU_1u5rsWooC2AJvIj1djo</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre</string>
    <string name="commercialName">Nombre comercial</string>
    <string name="group">Grupo</string>
    <string name="phone">Teléfono</string>
    <string name="email">Correo electrónico</string>
    <string name="category">Nivel</string>
    <string name="birth">Fecha de nacimiento</string>
    <string name="block">Bloquear</string>
    <string name="enabledDisabled">Activar/Desactivar</string>
    <string name="clientName">Nombre del cliente</string>
    <string name="note">Nota por bloque</string>
    <string name="manager">Encargado</string>
    <string name="business">Razón social</string>
    <string name="frequency">Frecuencia</string>
    <string name="registration">Fecha de registro</string>
    <string name="location">Ubicación</string>
    <string name="state">Estado</string>
    <string name="hectares">Hectáreas</string>
    <string name="blockName">Nombre del bloque</string>
    <string name="crop">Cultivo</string>
    <string name="type">Variedad</string>
    <string name="longitude">Longitud de brote</string>
    <string name="weekly_growing">Crecimiento semanal</string>
    <string name="surface">Superficie</string>
    <string name="types">Variedades</string>
    <string-array name="soil">
        <item>Suelo</item>
        <item>Sustrato</item>
    </string-array>
    <string-array name="management">
        <item>Convencional</item>
        <item>Orgánico</item>
    </string-array>
    <string name="altitude">Altitud</string>
    <string-array name="modality">
        <item>Presencial</item>
        <item>En línea</item>
        <item>Mixto</item>
    </string-array>
    <string name="blocks">Bloques</string>
    <string name="height">Altura (cm)</string>
    <string name="plague">Plaga</string>
    <string name="title">Título</string>
    <string name="text">Texto</string>
    <string name="link">Enlace</string>
    <string name="begin">Inicio</string>
    <string name="end">Fin</string>
    <string name="tendency">Tendencia</string>
    <string name="ingredient">Ingrediente activo</string>
    <string name="harvest_days">Días a cosecha</string>
    <string name="measurementUnit">Unidad</string>
    <string name="measurementUnitPresentation">Presentación (unidad)</string>
    <string name="quantity_presentation">Presentación (cantidad)</string>
    <string name="dosePerHectare">Dosis por héctarea</string>
    <string name="price">Precio</string>
    <string name="max_applications">Número máximo de aplicaciones</string>
    <string name="plagues">Plagas</string>
    <string name="geo_coordinates">Coordenadas geográficas</string>
    <string name="noConsultants">No hay consultores por el momento</string>
    <string name="noClients">No hay clientes por el momento</string>
    <string name="noUnits">No hay unidades de producción por el momento</string>
    <string name="noCrops">No hay cultivos por el momento</string>
    <string name="noKnowledge">No hay documentos en el centro de conocimiento por el momento</string>
    <string name="noPlagues">No hay plagas por el momento</string>
    <string name="noProducts">No hay productos por el momento</string>
    <string name="noNotifications">No hay notificaciones por el momento</string>
    <string name="noDiagnostics">No hay diagnósticos por el momento</string>
    <string name="units">Unidades de producción</string>
    <string name="generalInformation">Información general</string>
    <string name="assignedConsultants">Asesores asignados</string>
    <string name="observations">Observaciones</string>
    <string name="assignedClients">Mis clientes</string>
    <string name="about">Acerca de</string>
    <string name="dash">-</string>
    <string name="none">Ninguna</string>
    <string name="moreInfo">Más información ></string>
    <string name="level">Nivel de intensidad:</string>
    <string name="level1">Nivel de intensidad: 1</string>
    <string name="percentage">Porcentaje:</string>
    <string name="percentage0">Porcentaje: 0%</string>
    <string name="execution_applications">Ejecución aplicaciones: %d%%</string>
    <string name="execution_fertilizers">Ejecución fertilizantes: %d%%</string>
    <string name="development">Desarrollo:</string>
    <string name="development1">Desarrollo: 1</string>
    <string name="furrow_distance">Distancia surco</string>
    <string name="plant_distance">Distancia planta</string>
    <string name="sanity">Sanidad:</string>
    <string name="sanity1">Sanidad: 1</string>
    <string name="managementLevel">Manejo:</string>
    <string name="managementLevel1">Manejo: 1</string>
    <string name="total">Total</string>
    <string name="average">Promedio</string>
    <string name="three">3</string>
    <string name="one">1</string>
    <string name="fruit_per_plant_meter">Fruto por planta/metro</string>
    <string name="fruit_size">Tamaño del fruto</string>
    <string name="gram_per_fruit">Gramo por fruto</string>
    <string name="shrinkage_percentage_format">Porcentaje de merma: %d%%</string>
    <string name="shrinkage_percentage_default">Porcentage de merma: 5%</string>
    <string name="plantation">Plantación</string>
    <string name="harvest">Poda</string>
    <string name="dates">Fechas</string>
    <string-array name="activities">
        <item>Abrir/Cerrar mangueras</item>
        <item>Activación</item>
        <item>Colocación de plásticos</item>
        <item>Cosecha</item>
        <item>Deshojar</item>
        <item>Desmalezado</item>
        <item>Desmantelar rancho</item>
        <item>Enrollar plasticos</item>
        <item>Fertilización</item>
        <item>Instalación de infraestructura</item>
        <item>Lavado de sales</item>
        <item>Limpieza a cuarto de riego</item>
        <item>Limpieza a fruta</item>
        <item>Limpieza de rancho</item>
        <item>Orden rancho</item>
        <item>Preparación de terreno</item>
        <item>Plantaciones</item>
        <item>Poda</item>
        <item>Pinchado</item>
        <item>Poner mallas</item>
        <item>Raleo</item>
        <item>Riego</item>
        <item>Tutoreo</item>
        <item>Trampeo</item>
        <item>Ventilación</item>
    </string-array>
    <string-array name="tasks">
        <item>Cosecha</item>
        <item>Cuadre</item>
        <item>Instalación infraestructura</item>
        <item>Maduración</item>
        <item>Plantaciones</item>
        <item>Podas</item>
        <item>Preparacion tereno</item>
    </string-array>
    <string-array name="contingencies">
        <item>Escacez mano obra</item>
        <item>Falta de luz</item>
        <item>Granizo</item>
        <item>Heladas</item>
        <item>Inundación</item>
        <item>Mal funcionamiento de maquinaria</item>
        <item>Riego insuficiente</item>
        <item>Quemadura en hoja</item>
    </string-array>
    <string name="diagnostics">Diagnósticos</string>
    <string name="diagnostic">Diagnóstico</string>
    <string name="nitrateSymbol">NO₃</string>
    <string name="calciumSymbol">Ca²⁺</string>
    <string name="sodiumSymbol">Na⁺</string>
    <string name="potassiumSymbol">K⁺</string>
    <string name="phSymbol">pH</string>
    <string name="conductivitySymbol">COND</string>
    <string name="no_observations">Sin observaciones</string>
    <string name="username">Nombre de usuario</string>
    <string name="empty"> </string>
    <string name="observations_input">Escribir observaciones (opcional)</string>
    <string name="logo">Logo</string>
    <string name="consultant">Asesor</string>
    <string name="client">Cliente</string>
    <string name="notification">Notificación</string>
    <string name="unit">Unidad de producción</string>
    <string name="status">Estado</string>
    <string name="faceIcon">Icono de cara</string>
    <string name="icon_deleted">Icono de estatus de eliminación</string>
    <string name="ic_calendar">Icono de calendario</string>
    <string name="ic_right_arrow">Icono de flecha apuntando hacia la derecha</string>
    <string name="add">Add</string>
    <string name="hide">Show/Hide</string>
    <string name="copy">Copy</string>
    <string name="pdf">Ver PDF</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_save_location">Guardar ubicación</string>
    <string name="dropper">Gotero</string>
    <string name="drainage">Drenaje</string>
    <string name="substratum">Sustrato</string>
    <string name="foliage">Foliaje</string>
    <string name="signIn">Iniciar Sesión</string>
    <string name="signOut">Cerrar Sesión</string>
    <string name="administrator">Administrador</string>
    <string name="createConsultant">Registrar asesor</string>
    <string name="updateConsultant">Modificar asesor</string>
    <string name="signUpConsultant">Registrar asesor</string>
    <string name="createClient">Registrar cliente</string>
    <string name="createProspect">Registrar prospecto</string>
    <string name="updateClient">Modificar cliente</string>
    <string name="signUpClient">Registrar cliente</string>
    <string name="createUnit">Registrar unidad</string>
    <string name="updateUnit">Aceptar</string>
    <string name="saveBlock">Guardar bloque</string>
    <string name="deleteBlock">Eliminar bloque</string>
    <string name="createCrop">Registrar cultivo</string>
    <string name="updateCrop">Modificar cultivo</string>
    <string name="createKnowledge">Registrar documento</string>
    <string name="updateKnowledge">Modificar documento</string>
    <string name="deleteKnowledge">Eliminar documento</string>
    <string name="createPlague">Registrar plaga</string>
    <string name="updatePlague">Modificar plaga</string>
    <string name="createProduct">Registrar producto</string>
    <string name="updateProduct">Modificar producto</string>
    <string name="createNotification">Crear notificación</string>
    <string name="updateNotification">Modificar notificación</string>
    <string name="delete_notification">Eliminar notificación</string>
    <string name="saveConsultants">Guardar asesores</string>
    <string name="save_block">Guardar bloque</string>
    <string name="createDiagnostic">Crear diagnóstico</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="restore">Restaurar</string>
    <string name="deleteRestore">Eliminar/Restaurar</string>
    <string name="downloadPdf">Descargar PDF</string>
    <string name="finish_diagnostic">Finalizar diagnóstico</string>
    <string name="sharePdf">Compartir PDF</string>
    <string name="next">Siguiente</string>
    <string name="searchUpdate">Buscar actualización</string>
    <string name="createRecommendation">Crear recomendación</string>
    <string name="generatingRecommendation">Generando recomendación con IA, por favor espera…</string>
    <string name="selectUnit">Seleccionar una unidad</string>
    <string name="elimination">Eliminación</string>
    <string name="restoration">Restauración</string>
    <string name="uploading_file">Subiendo archivo…</string>
    <string name="select_block">Selecciona un bloque</string>
    <string name="copy_to">Copiar a</string>
    <string name="askDeleteConsultant">¿Estás seguro que deseas eliminar a este asesor permanentemente?</string>
    <string name="askRestoreConsultant">¿Estás seguro que deseas recuperar este asesor?</string>
    <string name="version">Versión 1.12.3</string>
    <string name="versionNotes">Modificaciones de la nueva versión 1.12.3\n
        \n- Se corrigió problema de clientes que no mostraban unidades de producción y diagnósticos\n
        \n- Se solucionó el error al asignar asesores a clientes en el módulo de administración\n
        </string>
</resources>