<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rBtnDropper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dropper" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rBtnDrainage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drainage" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rBtnSubstratum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/substratum" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rBtnFoliage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foliage" />

    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nitrateSymbol"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/border_rectangular" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calciumSymbol"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/border_rectangular" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sodiumSymbol"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/border_rectangular" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/potassiumSymbol"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/border_rectangular" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/phSymbol"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/border_rectangular" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/conductivitySymbol"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/border_rectangular" />

            </LinearLayout>

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="7"
                android:orientation="horizontal"
                android:alignmentMode="alignBounds"
                android:rowCount="1">
            </GridLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnCreateDiagnostic"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createDiagnostic"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:backgroundTint="@color/icon" />

</LinearLayout>