<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blockName"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawablePadding="5dp"
        app:drawableEndCompat="@drawable/ic_required" />

    <EditText
        android:id="@+id/etvBlock"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/empty"
        android:inputType="text"
        android:background="@drawable/border_round"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/furrow_distance"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:drawablePadding="5dp"
            app:drawableEndCompat="@drawable/ic_required" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/plant_distance"
            android:textSize="20sp"
            android:textStyle="bold"
            android:drawablePadding="5dp"
            app:drawableEndCompat="@drawable/ic_required" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etvFurrowDistance"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:hint="@string/empty"
            android:inputType="numberDecimal"
            android:background="@drawable/border_round"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/etvPlantDistance"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:hint="@string/empty"
            android:inputType="numberDecimal"
            android:background="@drawable/border_round"
            android:importantForAutofill="no" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dates"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawablePadding="5dp"
        app:drawableEndCompat="@drawable/ic_required" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/linearLayoutPlantation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:contentDescription="@string/ic_calendar" />

            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plantation" />

                <TextView
                    android:id="@+id/tvPlantation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/linearLayoutHarvest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:contentDescription="@string/ic_calendar" />

            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harvest" />

                <TextView
                    android:id="@+id/tvHarvest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinnerTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveBlock"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveBlock"
        android:backgroundTint="@color/icon"
        android:textColor="@color/text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDeleteBlock"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/deleteBlock"
        android:backgroundTint="@color/red"
        android:textColor="@color/text"
        android:textStyle="bold" />

</LinearLayout>
