<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/version"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvVersionNotes"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/versionNotes"
        android:justificationMode="inter_word" />

    <Button
        android:id="@+id/btnSearchUpdate"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchUpdate"
        android:backgroundTint="@color/icon"
        android:textColor="@color/text"
        android:textStyle="bold" />

</LinearLayout>